--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Logg inn med Feide</title>
-    <link rel="shortcut icon" href="/assets/favicon.ico">
+    <link rel="shortcut icon" href="https://www.feide.no/themes/custom/feide_theme/favicon.ico">
     <link rel="stylesheet" href="./src/main.css">
 </head>
 <body>
